force-app/main/default/objects/HM_Setting__mdt/HM_Setting__mdt.object-meta.xml
<CustomObject>
    <label>HM_Setting</label>
    <pluralLabel>HM_Settings</pluralLabel>
</CustomObject>