force-app/main/default/objects/HM_Setting__mdt/fields/Age_of_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Reduction__c</fullName>
    <description>Age in days after which score begins ticking towards 0</description>
    <inlineHelpText>Age in days after which score begins ticking towards 0</inlineHelpText>
    <label>Age of Reduction</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>