force-app/main/default/objects/HM_Setting__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Client_Health_Settings</relationshipLabel>
    <relationshipName>Client_Health_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>