force-app/main/default/objects/HM_Setting__mdt/fields/Reduction_per_Day__c.field-meta.xml
<CustomField>
    <fullName>Reduction_per_Day__c</fullName>
    <description>Score is reduced by this percentage for every day the age of reduction threshold is exceeded until it reaches 0</description>
    <inlineHelpText>Score is reduced by this percentage for every day the age of reduction threshold is exceeded until it reaches 0</inlineHelpText>
    <label>Reduction per Day</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>