force-app/main/default/objects/HM_Setting__mdt/fields/Related_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Date_Field__c</fullName>
    <description>Field used for aging score</description>
    <inlineHelpText>Field used for aging score</inlineHelpText>
    <label>Related Date Field</label>
    <metadataRelationshipControllingField>HM_Setting__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>HM_Settings2</relationshipLabel>
    <relationshipName>HM_Settings2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>