force-app/main/default/objects/HM_Setting__mdt/fields/Round_Up_Weight__c.field-meta.xml
<CustomField>
    <fullName>Round_Up_Weight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When calculating a subtotal, if one score input has this checked, the total weight will be bumped to 100%.

For example, if a CSAT subtotal field has only the input of Sponsor CSAT weighted at 80%, the score will be calculated as if the weight is 100%</description>
    <inlineHelpText>When calculating a subtotal, if one score input has this checked, the total weight will be bumped to 100%.</inlineHelpText>
    <label>Round Up Weight</label>
    <type>Checkbox</type>
</CustomField>