force-app/main/default/objects/HM_Setting__mdt/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score value between -1.00 and 1.00</description>
    <inlineHelpText>Score value between -1.00 and 1.00</inlineHelpText>
    <label>Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>