force-app/main/default/objects/HM_Setting__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <metadataRelationshipControllingField>HM_Setting__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>HM_Settings</relationshipLabel>
    <relationshipName>HM_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>