force-app/main/default/objects/HM_Setting__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <metadataRelationshipControllingField>HM_Setting__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>HM_Settings1</relationshipLabel>
    <relationshipName>HM_Settings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>