force-app/main/default/objects/HM_Setting__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Comma separated values that, if present in the source field, will apply this score.  Use &quot;!other&quot; to act as a catch all for any values specified.</description>
    <inlineHelpText>Comma separated values that, if present in the source field, will apply this score.  Use &quot;!other&quot; to act as a catch all for any values specified.</inlineHelpText>
    <label>Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>