force-app/main/default/objects/HM_Setting__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Percent weight of score applied to subtotal field.  If score is 1 with a weight of 20%, subtotal field will show 0.20</description>
    <inlineHelpText>Percent weight of score applied to subtotal field.</inlineHelpText>
    <label>Weight</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>